--- a/topster/about.html
+++ b/topster/about.html
@@ -178,12 +178,16 @@
             transform: scale(1.2);
             border-radius: 37% 58% 0% 0% / 16% 36% 0% 0%;
         }
-        .tab{
-            height: calc(45vh - (23px + 1.4rem));
-        }
         .bottomText{
             position: static;
 
+        }
+        .window{
+        aspect-ratio: auto;
+        height: 60vh;
+        }
+        .window-body{
+        height: calc(100% - (59px + 1.4rem));;
         }
     }
 
