--- a/topster/about.html
+++ b/topster/about.html
@@ -133,6 +133,7 @@
     }
     .modal .window{
         max-width: none;
+        height: auto;
     }
     .modal .window-body{
         height: auto;
