--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </ul>
           </div>
           <div class="col colscroll" id="colmid"><p class="transtext"> Hi, I'm a
-              currently employed webdev primarily doing frontend and a hobbyist
+              currently unemployed webdev primarily doing frontend and a hobbyist
               print designer. <br><br> I use HTML5, CSS3, lots of searching on
               the internet and VSCode to make sites. <br> For design work I work
               in Illustrator but I can work with Photoshop as well. <br><br> I'm
